[gd_scene load_steps=14 format=3 uid="uid://bi50mlqostd8g"]

[ext_resource type="Script" uid="uid://diyqkuqktaugf" path="res://Scripts/Item/interaction_drawer.gd" id="1_5djjo"]
[ext_resource type="Texture2D" uid="uid://jw1pr85nv3d0" path="res://Assets/Sprites/FirstPerson/first_person.png" id="1_fo3fe"]
[ext_resource type="FontFile" uid="uid://6ik02l1yg1ii" path="res://Assets/Fonts/Fusion Pixel 10px Monospaced/fusion-pixel-10px-monospaced-zh_hans.otf" id="2_5djjo"]
[ext_resource type="Resource" uid="uid://ck0yosofck30h" path="res://Resources/Item/Clues/clue_diary_lily.tres" id="2_k3rag"]
[ext_resource type="Texture2D" uid="uid://ow75lh8i7xjo" path="res://Assets/Textures/inventory-box.png" id="3_k3rag"]
[ext_resource type="PackedScene" uid="uid://c4r62wrijl4uu" path="res://Scenes/Item/highlight_item.tscn" id="4_klfnn"]
[ext_resource type="AudioStream" uid="uid://j2c1oqo3420" path="res://Assets/Audio/SFX back_Esc.mp3" id="5_17h8s"]
[ext_resource type="AudioStream" uid="uid://cafr3duw7wf27" path="res://Assets/Audio/SFX Drag item or ambil item.mp3" id="6_7ig2y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6hf5"]
bg_color = Color(0, 0, 0, 0.7019608)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo3fe"]
atlas = ExtResource("1_fo3fe")
region = Rect2(384, 554, 328, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_p30hb"]
atlas = ExtResource("1_fo3fe")
region = Rect2(1110, 717, 134, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_5djjo"]
atlas = ExtResource("1_fo3fe")
region = Rect2(12, 552, 327, 250)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ivyo"]
texture = ExtResource("3_k3rag")
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
region_rect = Rect2(16, 16, 32, 32)

[node name="InteractionDrawer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5djjo")
book_data = ExtResource("2_k3rag")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b6hf5")

[node name="TextureLaciOpened" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_fo3fe")
stretch_mode = 5

[node name="TextureBuku" type="TextureRect" parent="PanelContainer/TextureLaciOpened"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 418.00003
offset_top = 469.00003
offset_right = 562.0
offset_bottom = 574.0
scale = Vector2(2.8, 2.8)
texture = SubResource("AtlasTexture_p30hb")
stretch_mode = 5

[node name="ClickableAreaBook" type="Button" parent="PanelContainer/TextureLaciOpened"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 424.0
offset_top = 522.0
offset_right = 1704.0
offset_bottom = 1242.0
scale = Vector2(0.30818325, 0.26661718)
mouse_default_cursor_shape = 2

[node name="TextureLaciClosed" type="TextureRect" parent="PanelContainer"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_5djjo")
stretch_mode = 5

[node name="ClickableAreaOpenDrawer" type="Button" parent="PanelContainer/TextureLaciClosed"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 329.0
offset_top = 387.0
offset_right = 1609.0
offset_bottom = 1107.0
scale = Vector2(0.49074116, 0.39490002)
mouse_default_cursor_shape = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Button" type="Button" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_5djjo")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_3ivyo")
text = "Close"

[node name="HighlightItem" parent="." instance=ExtResource("4_klfnn")]
process_mode = 3
visible = false
layout_mode = 1

[node name="PutItemSFX" type="AudioStreamPlayer2D" parent="HighlightItem"]
unique_name_in_owner = true
stream = ExtResource("5_17h8s")

[node name="PickupSFX" type="AudioStreamPlayer2D" parent="HighlightItem"]
unique_name_in_owner = true
stream = ExtResource("6_7ig2y")

[connection signal="pressed" from="PanelContainer/TextureLaciOpened/ClickableAreaBook" to="." method="_on_clickable_area_book_pressed"]
[connection signal="pressed" from="PanelContainer/TextureLaciClosed/ClickableAreaOpenDrawer" to="." method="_on_clickable_area_open_drawer_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Button" to="." method="_on_button_close_pressed"]
